sumo/tests/netconvert/errors/invalid_argument_vclass/errors.netconvert
Error: Unkown vehicle class 'bogus' in option 'remove-edges.by-vclass'.
Quitting (on error).
